src/test/testFiles/valid/strings.manimdsl
let x: string = "hi";
let y: string = "hi2";
let z = x == y;
let a = x + y;
let b = a[2];
