src/test/testFiles/invalid/semanticErrors/stringImmutabilityError.manimdsl
let x = "hi";
x[0] = '3';